CSS Fix Removed gap between navbar and top of page on portrait devices and thin screens

--- a/main.css
+++ b/main.css
@@ -192,7 +192,7 @@ body {
     }
 
     body {
-        margin-top: 3em;
+      margin-top: 0;
     }
 }
 
@@ -211,5 +211,9 @@ body {
 
     .page-header {
       margin-top: 3em;
+    }
+
+    body {
+      margin-top: 0;
     }
 }
